[gd_scene load_steps=10 format=3 uid="uid://2obgmdkd56t"]

[ext_resource type="Script" uid="uid://cm1arlphhrjgp" path="res://project/src/ui/scenes/stage01_slice.gd" id="1"]
[ext_resource type="PackedScene" path="res://project/src/ui/scenes/battlefield_view.tscn" id="2"]
[ext_resource type="PackedScene" path="res://project/src/ui/scenes/action_picker.tscn" id="3"]
[ext_resource type="PackedScene" path="res://project/src/ui/scenes/dice_panel.tscn" id="4"]
[ext_resource type="PackedScene" path="res://project/src/ui/scenes/reference_panel.tscn" id="5"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.15, 0.2, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.8, 0.9)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.2, 0.15, 0.25, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.4, 0.8, 0.9)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.18, 0.22, 0.18, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.65, 0.4, 0.9)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.25, 0.18, 0.14, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.55, 0.35, 0.9)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Stage01Slice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BattlefieldView" parent="." instance=ExtResource("2")]
layout_mode = 1
anchor_right = 0.7

[node name="Sidebar" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="ActionPanel" type="PanelContainer" parent="Sidebar"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="ActionPicker" parent="Sidebar/ActionPanel" instance=ExtResource("3")]
layout_mode = 2

[node name="DicePanelContainer" type="PanelContainer" parent="Sidebar"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("2")

[node name="DicePanel" parent="Sidebar/DicePanelContainer" instance=ExtResource("4")]
layout_mode = 2

[node name="ReferencePanelContainer" type="PanelContainer" parent="Sidebar"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("3")

[node name="ReferencePanel" parent="Sidebar/ReferencePanelContainer" instance=ExtResource("5")]
layout_mode = 2

[node name="DemoCommandButtonContainer" type="PanelContainer" parent="Sidebar"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("4")

[node name="DemoCommandButton" type="Button" parent="Sidebar/DemoCommandButtonContainer"]
layout_mode = 2
text = "Run Demo Command"
